--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,8 @@ CodeCoverage/
 TestResult.xml
 nunit-*.xml
 .fake
+/.vs/AdventOfCode/CopilotIndices/18.0.934.24903
+/.vs/AdventOfCode/DesignTimeBuild
+/.vs/AdventOfCode/FileContentIndex
+/.vs/AdventOfCode/v18
+/.vs
